crates/descar-core/tests/snapshots/line_tracker_snapshots__empty_lines.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: rendered
---
offset_0={ line: 1, column: 1, offset: 0, index: 0, utf8_offset: 0, code_point_offset: 0 }
offset_1={ line: 2, column: 1, offset: 1, index: 1, utf8_offset: 1, code_point_offset: 1 }
offset_2={ line: 3, column: 1, offset: 2, index: 2, utf8_offset: 2, code_point_offset: 2 }
offset_3={ line: 4, column: 1, offset: 3, index: 3, utf8_offset: 3, code_point_offset: 3 }
