crates/descar-core/tests/snapshots/line_tracker_snapshots__empty_source.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: "render_location(\"location\", location)"
---
location={ line: 1, column: 1, offset: 0, index: 0, utf8_offset: 0, code_point_offset: 0 }
