crates/descar-core/tests/snapshots/line_tracker_snapshots__eof_positions.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: rendered
---
ascii={ line: 1, column: 4, offset: 3, index: 3, utf8_offset: 3, code_point_offset: 3 }
unicode_bmp={ line: 1, column: 4, offset: 6, index: 3, utf8_offset: 6, code_point_offset: 3 }
unicode_supplementary={ line: 1, column: 4, offset: 6, index: 4, utf8_offset: 6, code_point_offset: 3 }
lf={ line: 2, column: 1, offset: 4, index: 4, utf8_offset: 4, code_point_offset: 4 }
cr={ line: 2, column: 1, offset: 4, index: 4, utf8_offset: 4, code_point_offset: 4 }
crlf={ line: 2, column: 1, offset: 5, index: 5, utf8_offset: 5, code_point_offset: 5 }
line_separator={ line: 2, column: 1, offset: 6, index: 4, utf8_offset: 6, code_point_offset: 4 }
paragraph_separator={ line: 2, column: 1, offset: 6, index: 4, utf8_offset: 6, code_point_offset: 4 }
