crates/descar-core/tests/snapshots/line_tracker_snapshots__extended_unicode_line_endings.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: rendered
---
next_line={ line: 2, column: 1, offset: 3, index: 2, utf8_offset: 3, code_point_offset: 2 }
line_separator={ line: 2, column: 1, offset: 4, index: 2, utf8_offset: 4, code_point_offset: 2 }
paragraph_separator={ line: 2, column: 1, offset: 4, index: 2, utf8_offset: 4, code_point_offset: 2 }
