crates/descar-core/tests/snapshots/line_tracker_snapshots__span_with_unicode.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: rendered
---
file_path=test.lang
length=4
is_empty=false
is_multiline=false
start=SourceLocation { line: 1, column: 2, offset: 1, index: 1, utf8_offset: 1, code_point_offset: 1 }
end=SourceLocation { line: 1, column: 3, offset: 5, index: 3, utf8_offset: 5, code_point_offset: 2 }
