crates/descar-core/tests/snapshots/line_tracker_snapshots__unicode_after_newline.snap
---
source: crates/descar-core/tests/line_tracker_snapshots.rs
expression: rendered
---
offset_4={ line: 2, column: 1, offset: 4, index: 4, utf8_offset: 4, code_point_offset: 4 }
offset_5={ line: 2, column: 2, offset: 5, index: 5, utf8_offset: 5, code_point_offset: 5 }
offset_7={ line: 2, column: 3, offset: 7, index: 6, utf8_offset: 7, code_point_offset: 6 }
offset_11={ line: 2, column: 4, offset: 11, index: 8, utf8_offset: 11, code_point_offset: 7 }
offset_12={ line: 2, column: 5, offset: 12, index: 9, utf8_offset: 12, code_point_offset: 8 }
